# fgen

./: .gitignore  Cargo.toml  README.md  build.rs
include/: generator.h
src/: errors.rs  generator.rs  interface.rs  lib.rs
tests/: integration.rs
