[package]
name = "fgen"
version = "0.1.0"
authors = ["Petr Hodina <hodinapetr46@gmail.com>"]
build = "build.rs"
description="Generate file based on template"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/phodina/fgen"
homepage = "https://github.com/phodina/fgen"

[lib]
crate-type = ["dylib", "rlib"]

[features]
default=[]
cc = ["cbindgen", "libc"]

[build-dependencies]
cbindgen = { version = "0.6.0", optional = true }
libc = { version = "0.2.42", optional = true }

[dev-dependencies]
tempdir = "0.3.6"

[dependencies]
error-chain = "0.11.0"
tera = "0.11.8" 
log = "0.4.2"
env_logger = "0.5.10"
